cabal-version: 2.4
name: aoc2022
version: 0.1.0.0

author: jrvieira
maintainer: github@jrvieira.com

extra-source-files: README.md
   , aoc.sh
   , aoc.hs
   , aoc

executable aoc2022
   main-is: Main.hs
   ghc-options: -O2 -threaded -rtsopts -Wall

   hs-source-dirs: src

   build-depends: base
      , ansi-terminal-game == 1.8.0.0
      , containers
      , split

   other-modules: Zero.Zero
      , Zero.Color
      , Α01, Β02, Γ03, Δ04
      , Ε05, Ζ06, Η07, Θ08
      , Ι09, Κ10, Λ11, Μ12
      , Ν13, Ξ14, Ο15, Π16
      , Ρ17, Σ18, Τ19, Υ20
      , Φ21, Χ22, Ψ23, Ω24

   default-language: Haskell2010

   default-extensions: BangPatterns
      , ImportQualifiedPost
      , TupleSections
      , GADTs
      , StandaloneDeriving
      , ScopedTypeVariables
      , BinaryLiterals
   -- , GeneralizedNewtypeDeriving
      , LexicalNegation
   -- , OverloadedLists
   -- , OverloadedStrings
      , TypeApplications
      , PartialTypeSignatures
